Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-117096

Input fields (QWidgets and QML) don't register dead keys accents when using a Linux desktop

    XMLWordPrintable

Details

    • WebAssembly

    Description

      Input "accent" characters using Linux desktop doesn't work in a Qt for webassembly page.

      In Windows they work well, something like "é" works just fine, but in Linux they don't work, it will just display "e".

      This in a QLineEdit (QtWidgets) and TextField (QML).

      In a portuguese keyboard "é" is inputted with '´' followed by 'e'.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lpotter Lorn Potter
            qtuser32 Random Guy
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:

              Gerrit Reviews

                There are no open Gerrit changes