wasm: add input context composition WA for ibus

With IBUS, compositions are processed with "Dead" key.
It is supposed to be processed with input context,
so window's key event will be skipped.

Fixes: QTBUG-117096
Change-Id: I179d32d656bd38990de4b656757957e26935376f
Reviewed-by: Lorn Potter <lorn.potter@qt.io>
(cherry picked from commit c494ed87382605bdafa23f15d79c2a44e75cf911)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit a338caec1b4569f3aef3f1622389fe26278eb4e3)
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>