src/plugins/platforms/wasm/qwasmwindow.cpp
@@ -150,7 +150,7 @@ QWasmWindow::QWasmWindow(QWindow *w, QWasmDeadKeySupport *deadKeySupport,
                 return;
             } else if (keyString.size() != 1) {
                 if (!wasmInput->preeditString().isEmpty()) {
-                    if (keyString == "Process" || keyString == "Backspace") {
+                    if (keyString == "Process" || keyString == "Backspace" || keyString == "Dead") {
                         // processed by InputContext
                         // "Process" should be handled by InputContext but
                         // QWasmInputContext's function is incomplete now
